--- a/build.gradle
+++ b/build.gradle
@@ -11,21 +11,15 @@ buildscript {
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
-apply plugin: 'maven-publish'
+apply plugin: 'antlr'
 
-version = '1.0'
-group = 'com.yourname.modid' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'modid'
+version = "${versionNum}.${majorBuildNum}.${minorBuildNum}"
+group = 'com.sonicandtailscd.roboticraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = 'Roboticraft'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
 minecraft {
-    // The mappings can be changed at any time, and must be in the following format.
-    // snapshot_YYYYMMDD   Snapshot are built nightly.
-    // stable_#            Stables are built at the discretion of the MCP team.
-    // Use non-default mappings at your own risk. they may not always work.
-    // Simply re-run your setup task after changing the mappings to update your workspace.
-    //mappings channel: 'snapshot', version: '20171003-1.12'
     mappings channel: 'snapshot', version: '20171003-1.12'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
     
@@ -55,42 +49,34 @@ minecraft {
     }
 }
 
+configurations {
+    shade
+    compile.extendsFrom shade
+}
 dependencies {
-    // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
-    // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
-    // The userdev artifact is a special name and will get all sorts of transformations applied to it.
+    compile "com.github.DomAmato:rabbit-gui:master-SNAPSHOT"
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2860'
-
-    // You may put jars on which you depend on in ./libs or you may define them like so..
-    // compile "some.group:artifact:version:classifier"
-    // compile "some.group:artifact:version"
-
-    // Real examples
-    // compile 'com.mod-buildcraft:buildcraft:6.0.8:dev'  // adds buildcraft to the dev env
-    // compile 'com.googlecode.efficient-java-matrix-library:ejml:0.24' // adds ejml to the dev env
-
-    // The 'provided' configuration is for optional dependencies that exist at compile-time but might not at runtime.
-    // provided 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // These dependencies get remapped to your current MCP mappings
-    // deobf 'com.mod-buildcraft:buildcraft:6.0.8:dev'
-
-    // For more info...
-    // http://www.gradle.org/docs/current/userguide/artifact_dependencies_tutorial.html
-    // http://www.gradle.org/docs/current/userguide/dependency_management.html
+    shade group: "org.java-websocket", name: "Java-WebSocket", version: "1.3.0"
+    antlr "org.antlr:antlr4:4.5.3"
+    shade "org.antlr:antlr4-runtime:4.5.3"
 
 }
 
 // Example for how to get properties into the manifest for reading by the runtime..
 jar {
+    configurations.shade.each{  dep ->
+        from(project.zipTree(dep)) {
+            exclude "META-ING", "META-INF/**", "../.Trash-1000", "**/LICENSE"
+        }
+    }
     manifest {
         attributes([
-            "Specification-Title": "examplemod",
-            "Specification-Vendor": "examplemodsareus",
+            "Specification-Title": "Roboticraft",
+            "Specification-Vendor": "SonicandTailsCD",
             "Specification-Version": "1", // We are version 1 of ourselves
             "Implementation-Title": project.name,
             "Implementation-Version": "${version}",
-            "Implementation-Vendor" :"examplemodsareus",
+            "Implementation-Vendor" :"SonicandTailsCD",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
@@ -102,15 +88,16 @@ jar.finalizedBy('reobfJar')
 // However if you are in a multi-project build, dev time needs unobfed jar files, so you can delay the obfuscation until publishing by doing
 //publish.dependsOn('reobfJar')
 
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            artifact jar
+task incrementVersion {
+    ant.propertyfile(file: "gradle.properties") {
+        if (entry(key: "minorBuildNum", type: "int") == 9) {
+            entry(key: "minorBuildNum", type: "int", operation: "-9")
+            entry(key: "majorBuildNum", type: "int", operation: "+")
         }
-    }
-    repositories {
-        maven {
-            url "file:///${project.projectDir}/mcmodsrepo"
+        if (entry(key: "majorBuildNum", type: "int") == 9) {
+            entry(key: "versionBuildNum", type: "int", default: "0", operation: "+")
         }
     }
 }
+
+tasks.build.mustRunAfter incrementVersion
