--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,7 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx2G
 org.gradle.daemon=false
+versionBuildNum=1
+majorBuildNum=0
+minorBuildNum=0
